# vishesh-coding-language

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: Release_CICD.yml  Tests.yml  code-analysis-rust-clippy.yml
cicd/: build_linux.sh  build_mac.sh  build_windows.ps1
cli/: Cargo.toml
cli/src/: utilities.rs
core/src/: aadhaar.rs  lexer.rs  parser.rs
core/src/moolsutra/: mod.rs  std_crypto.rs  std_ganit.rs  std_sanchika.rs  std_shabd.rs
docs/: PLAN_VEDIC_NG.md  VEDIC_UPSCALE_PLAN.md  VISH_DISTRIBUTION_PLAN.md
examples/blockchain/: blockchain.ved
examples/demos/: ganit_demo.vish  vish_showcase.vish
examples/games/: warriors.txt  yuddha.ved
examples/graphics/: mandala.vish
polyfill/: vedic_interpreter.py
tools/: unit_test.py
