[workspace]
resolver = "2"
members = ["cli", "core", "wasm"]
default-members = ["cli", "core"]

[workspace.metadata]
name = "vish"
version = "2.0.0"
authors = ["Vishesh Sanghvi <visheshsanghvi112@gmail.com>", "Pt. Prashant Tripathi <ptprashanttripathi@outlook.com>"]
edition = "2021"
description = "Vish Language - A Sanskrit Programming Language (Vedic on Steroids)"
license = "MIT"
repository = "https://github.com/visheshsanghvi112/vishesh-coding-language"
documentation = "https://github.com/visheshsanghvi112/vishesh-coding-language"
readme = "README.md"
keywords = ["vish", "vedic", "cli", "rust", "command-line-utilities", "programming-languages", "sanskrit", "interpreter"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'
overflow-checks = true
