[package]
name = "vish"
version = "2.0.0"
authors = ["Vishesh Sanghvi <visheshsanghvi112@gmail.com>", "Pt. Prashant Tripathi <ptprashanttripathi@outlook.com>"]
edition = "2021"
description = "Vish Language - A Sanskrit Programming Language (Vedic on Steroids)"
license = "MIT"

[dependencies]
vedic-core = { path = "../core" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "vish.exe"
LegalCopyright = "Copyright © 2024 Vishesh Sanghvi"

[package.metadata.deb]
maintainer = "Vishesh Sanghvi <visheshsanghvi112@gmail.com>"
copyright = "Copyright (c) Vishesh Sanghvi 2024. All rights reserved."
license-file = ["../LICENSE", "0"]
extended-description = """
Vish Language - A Sanskrit Programming Language (Vedic on Steroids)
Features 28+ Sanskrit-named functions for math, strings, file I/O, and graphics."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/vish", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/vish/README", "644"],
    ["../LICENSE", "usr/share/doc/vish/LICENSE", "644"],
]

[package.metadata.bundle]
identifier = "io.github.visheshsanghvi112.vish"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
resources = ["../assets/*.png"]
copyright = "Copyright (c) Vishesh Sanghvi 2024. All rights reserved."
category = "Developer Tool"
short_description = "Vish Language - Sanskrit Programming (Vedic on Steroids)"
long_description = """
Vish is a Sanskrit-inspired programming language with 28+ native functions
including mathematics (sin, cos, sqrt), strings, file I/O, and graphics.
Extension: .vish
"""
osx_frameworks = ["SDL2"]
osx_url_schemes = ["vish"]
